--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,24 @@
             <artifactId>nekohtml</artifactId>
             <version>1.9.22</version>
         </dependency>
-
+    
+        <!--springboot2.X集成 UReport2 报表引擎-->
+        <!-- https://mvnrepository.com/artifact/com.bstek.ureport/ureport2-console -->
+        <dependency>
+            <groupId>com.bstek.ureport</groupId>
+            <artifactId>ureport2-console</artifactId>
+            <version>2.2.9</version>
+        </dependency>
+    
+    
+        <!-- JSON 前后端数据传输交互中,经常会遇到字符串(String)与json,XML等格式相互转换与解析
+        https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
+        </dependency>
+        
     </dependencies>
 
 
