--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,7 +67,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 # mysql数据源配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.druid.url=jdbc:mysql://127.0.0.1:3306/mysql_springboot?useUnicode=true&characterEncoding=utf-8
 spring.datasource.druid.username=root
 spring.datasource.druid.password=root
@@ -76,20 +76,6 @@ spring.datasource.druid.password=root
 #spring.datasource.druid.default.url=jdbc:mysql://127.0.0.1:3306/mysql_springboot?useUnicode=true&characterEncoding=utf-8
 #spring.datasource.druid.default.username=root
 #spring.datasource.druid.default.password=root
-
-#第一个数据源
-spring.datasource.druid.master.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.master.url=jdbc:mysql://localhost:3306/elk?characterEncoding=utf8&useSSL=true
-spring.datasource.druid.master.username=root
-spring.datasource.druid.master.password=root
-
-
-#第二个数据源
-spring.datasource.druid.slave.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.slave.url=jdbc:mysql://localhost:3306/mall?characterEncoding=utf8&useSSL=true
-spring.datasource.druid.slave.username=root
-spring.datasource.druid.slave.password=root
-
 
 # 配置加密
 #spring.datasource.druid.master.connect-properties.config.decrypt=true
